fixes + practice lesson 14

--- a/StartMenu/StartMenu.csproj
+++ b/StartMenu/StartMenu.csproj
@@ -10,6 +10,9 @@
   <ItemGroup>
     <ProjectReference Include="..\Lesson10\Lesson10.csproj" />
     <ProjectReference Include="..\Lesson11\Lesson11.csproj" />
+    <ProjectReference Include="..\Lesson12\Lesson12.csproj" />
+    <ProjectReference Include="..\Lesson13\Lesson13.csproj" />
+    <ProjectReference Include="..\Lesson14\Lesson14.csproj" />
     <ProjectReference Include="..\Lesson1\Lesson1.csproj" />
     <ProjectReference Include="..\Lesson2\Lesson2.csproj" />
     <ProjectReference Include="..\Lesson3\Lesson3.csproj" />
